fixed appearing whitespace from last commit

--- a/css/styles.css
+++ b/css/styles.css
@@ -2325,3 +2325,7 @@ a:hover.back-to-top {
 
 
 /* end of min-width width 1200px */
+
+#currentWork {
+    padding-top: 5%;
+}
